<resources>
    <string name="app_name">Splatpoons</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sub_weapon">Sub:</string>
    <string name="special_weapon">Special:</string>
    <string name="range_weapon">Range:</string>
    <string name="damage_weapon">Damage:</string>
    <string name="conexion_error">Error en conexion</string>
    <string name="Clicked">Click en %1$s</string>
    <string name="id_recived">ID recibido como detalle %1$s</string>
    <string name="model">Model</string>
    <string name="weapon">Weapon</string>
    <string name="weapon_class">class</string>
    <string name="specs">Specs</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_email">Enter your email</string>
    <string name="email_invalid">Enter a valid email</string>
    <string name="password_required">Enter your password</string>
    <string name="login_succesful">Login succesful</string>
    <string name="wrong_email">Email or password wrong</string>
    <string name="account_exists">This account already exists</string>
    <string name="email_used">The email is already in use</string>
    <string name="expired_session">Session expired. Login again</string>
    <string name="user_not_found">The user was not found</string>
    <string name="password_requierements">Password mus be at least 6 characters long</string>
    <string name="lost_connection">The connection was lost</string>
    <string name="error_aunthenticate">Couln\'t authenticate the user</string>
    <string name="verification_email_sent">Verification email sent</string>
    <string name="verification_email_couldn_t_be_sent">Verification email couldn\'t be sent</string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_your_email_to_reset_password">Enter your email to reset password</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel\n</string>
    <string name="email">Email</string>
    <string name="enter">Enter</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgotten password? Restore password</string>
    <string name="weapon_list">Weapon list</string>
    <string name="logout">Logout</string>
    <string name="location">Location</string>
    <string name="connection_lost">Connection lost</string>
    <string name="error_video">Error playing the video</string>
    <string name="video_unavailable">Video unavailable</string>
</resources>