<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.WeaponDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:indeterminateDuration="1500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/weapon_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.194" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="53dp"
            android:textAlignment="center"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivImage" />

        <TextView
            android:id="@+id/tvClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/sub"
            android:layout_width="53dp"
            android:layout_height="18dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:text="@string/sub_weapon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvClass" />

        <TextView
            android:id="@+id/special"
            android:layout_width="54dp"
            android:layout_height="19dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/special_weapon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sub" />

        <TextView
            android:id="@+id/range"
            android:layout_width="56dp"
            android:layout_height="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/range_weapon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/special" />

        <TextView
            android:id="@+id/damage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/damage_weapon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/range" />

        <TextView
            android:id="@+id/tvSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toEndOf="@+id/sub"
            app:layout_constraintTop_toBottomOf="@+id/tvClass" />

        <TextView
            android:id="@+id/tv_special"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/special"
            app:layout_constraintTop_toBottomOf="@+id/tvSub" />

        <TextView
            android:id="@+id/tv_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/range"
            app:layout_constraintTop_toBottomOf="@+id/tv_special" />

        <TextView
            android:id="@+id/tv_damage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@+id/damage"
            app:layout_constraintTop_toBottomOf="@+id/tv_range" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>